# cuthttp

./: .gitignore  Dockerfile  LICENSE  README.md  chfs-simple.yaml  chfs.yaml  docker-compose.yml  pyproject.toml  start-chfs.bat  start-chfs.ps1  一键部署.ps1  使用说明.md  安装依赖.bat  快速启动.cmd  打开Web界面.cmd  简单启动.bat
app/: __init__.py  api.py  auth.py  config.py  control_panel.py  direct_transfer.py  fs.py  ipfilter.py  main.py  metrics.py  middleware.py  models.py  quota.py  rules.py  server_runtime.py  server_store.py  share_store.py  storage_server.py  ui.py  user_store.py  utils.py  webdav.py
data/public/: 欢迎使用.txt
scripts/: e2e_smoke.ps1  install-service.ps1  run-dev.ps1  server-control.ps1
templates/: index.html  text.html
tests/: __init__.py  test_control_panel.py  test_fs_path.py  test_ipfilter.py  test_range.py  test_rules.py
